# knowledge_path

./: .gitignore  CMakeLists.txt  README.md
lib/json/.github/workflows/: codeql-analysis.yml  scorecards.yml  ubuntu.yml
lib/json/docs/mkdocs/docs/community/: quality_assurance.md
lib/json/tests/src/: unit-regression2.cpp
src/: Graph.cpp  Graph.h  main.cpp  openalex.cpp  openalex.h
test/: test.cpp
